block zoom in phone and fix extra screen issue in home.jsx

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link style="border-radius: 50px" rel="icon" href="%PUBLIC_URL%/Header_logo.jpg" type="image/icon type">
+  <meta name="viewport" content="width=device-width, user-scalable=no" />
   <title>Arjun Singh</title>
 </head>
 <body>
